[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/config/settings/input/ControllerLayout.gd" type="Script" id=1]
[ext_resource path="res://addons/controller_icons/assets/xboxone/diagram_simple.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui_nodes/LazyTextureRect.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/controller_mapper/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/controller_mapper/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/controller_mapper/circle_progress.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/controller_mapper/circle_progress_under.png" type="Texture" id=7]
[ext_resource path="res://resources/fonts/default_italic.tres" type="DynamicFont" id=8]

[node name="ControllerLayout" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.5
margin_top = -248.0
margin_right = 371.5
margin_bottom = 248.0
popup_exclusive = true
script = ExtResource( 1 )
unknown_mapping = Color( 0.0901961, 0.0901961, 0.0901961, 0.737255 )
current_mapping = Color( 0.360784, 0.839216, 0, 0.717647 )
known_mapping = Color( 0.133333, 0.313726, 0, 0.737255 )

[node name="TopLabelRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.08
margin_top = 2.0
margin_bottom = 29.32

[node name="Press" type="Label" parent="TopLabelRoot"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
text = "Press the highlighted button on your controller"
align = 1
valign = 1

[node name="Move" type="Label" parent="TopLabelRoot"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Move the highlighted stick on your controller to any of the two directions given."
align = 1
valign = 1

[node name="Done" type="Label" parent="TopLabelRoot"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Layout complete! Test if the buttons are working as intended."
align = 1
valign = 1

[node name="ActionDescription" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 57.0
margin_right = 100.5
margin_bottom = 93.0
custom_fonts/font = ExtResource( 8 )
text = "Button Prompt"
align = 1
valign = 1
autowrap = true

[node name="Diagram" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -172.5
margin_right = 252.0
margin_bottom = 146.5
rect_min_size = Vector2( 40, 25 )
texture = ExtResource( 2 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="A" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -18.0
margin_top = -17.475
margin_right = 18.0
margin_bottom = 18.525
texture = ExtResource( 4 )
expand = true

[node name="B" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 16.0
margin_top = -48.975
margin_right = 52.0
margin_bottom = -12.975
texture = ExtResource( 4 )
expand = true

[node name="Y" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -16.0
margin_top = -76.475
margin_right = 19.0
margin_bottom = -41.475
texture = ExtResource( 4 )
expand = true

[node name="X" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -50.0
margin_top = -45.975
margin_right = -15.0
margin_bottom = -10.975
texture = ExtResource( 4 )
expand = true

[node name="Start" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -102.0
margin_top = -40.475
margin_right = -77.0
margin_bottom = -15.475
texture = ExtResource( 4 )
expand = true

[node name="Select" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -172.0
margin_top = -40.975
margin_right = -147.0
margin_bottom = -15.975
texture = ExtResource( 4 )
expand = true

[node name="L1" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -241.0
margin_top = -134.975
margin_right = -208.0
margin_bottom = -101.975
texture = ExtResource( 4 )
expand = true

[node name="R1" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -41.0
margin_top = -135.975
margin_right = -8.00003
margin_bottom = -102.975
texture = ExtResource( 4 )
expand = true

[node name="L2" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -272.0
margin_top = -172.975
margin_right = -239.0
margin_bottom = -139.975
texture = ExtResource( 4 )
expand = true

[node name="R2" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -11.0
margin_top = -172.975
margin_right = 22.0
margin_bottom = -139.975
texture = ExtResource( 4 )
expand = true

[node name="L3" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -259.0
margin_top = -28.975
margin_right = -237.0
margin_bottom = -6.97501
texture = ExtResource( 4 )
expand = true

[node name="R3" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -70.0
margin_top = 39.025
margin_right = -48.0
margin_bottom = 61.025
texture = ExtResource( 4 )
expand = true

[node name="UpDPAD" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -198.0
margin_top = 10.025
margin_right = -176.0
margin_bottom = 32.025
texture = ExtResource( 5 )
expand = true

[node name="DownDPAD" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -198.0
margin_top = 50.025
margin_right = -176.0
margin_bottom = 72.025
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="LeftDPAD" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -219.0
margin_top = 52.025
margin_right = -197.0
margin_bottom = 74.025
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true

[node name="RightDPAD" type="TextureRect" parent="Diagram"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = -177.0
margin_top = 52.025
margin_right = -155.0
margin_bottom = 74.025
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="YAxisLStick" type="Control" parent="Diagram"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0

[node name="UpLStick" type="TextureRect" parent="Diagram/YAxisLStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 89.0
margin_top = 97.5
margin_right = 111.0
margin_bottom = 119.5
texture = ExtResource( 5 )
expand = true

[node name="DownLStick" type="TextureRect" parent="Diagram/YAxisLStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 89.0
margin_top = 137.5
margin_right = 111.0
margin_bottom = 159.5
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="XAxisLStick" type="Control" parent="Diagram"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftLStick" type="TextureRect" parent="Diagram/XAxisLStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 68.0
margin_top = 139.5
margin_right = 90.0
margin_bottom = 161.5
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true

[node name="RightLStick" type="TextureRect" parent="Diagram/XAxisLStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 110.0
margin_top = 139.5
margin_right = 132.0
margin_bottom = 161.5
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="YAxisRStick" type="Control" parent="Diagram"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0

[node name="UpRStick" type="TextureRect" parent="Diagram/YAxisRStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 278.0
margin_top = 165.5
margin_right = 300.0
margin_bottom = 187.5
texture = ExtResource( 5 )
expand = true

[node name="DownRStick" type="TextureRect" parent="Diagram/YAxisRStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 278.0
margin_top = 205.5
margin_right = 300.0
margin_bottom = 227.5
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="XAxisRStick" type="Control" parent="Diagram"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftRStick" type="TextureRect" parent="Diagram/XAxisRStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 257.0
margin_top = 207.5
margin_right = 279.0
margin_bottom = 229.5
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true

[node name="RightRStick" type="TextureRect" parent="Diagram/XAxisRStick"]
unique_name_in_owner = true
anchor_left = 0.75
anchor_top = 0.525
anchor_right = 0.75
anchor_bottom = 0.525
margin_left = 299.0
margin_top = 207.5
margin_right = 321.0
margin_bottom = 229.5
rect_rotation = -90.0
texture = ExtResource( 5 )
expand = true
flip_v = true

[node name="PressProgress" type="TextureProgress" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.986
anchor_right = 0.5
anchor_bottom = 0.986
margin_left = -30.5
margin_top = -138.556
margin_right = 30.5
margin_bottom = -77.556
max_value = 0.9
step = 0.01
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 4
nine_patch_stretch = true

[node name="MainButtonRoot" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.5
margin_top = -61.0
margin_right = 82.5
margin_bottom = -21.0

[node name="SkipButton" type="Button" parent="MainButtonRoot"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
text = "Skip"

[node name="DoneButton" type="Button" parent="MainButtonRoot"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Done"

[node name="SecButtonRoot" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -323.0
margin_top = -61.0
margin_right = -158.0
margin_bottom = -21.0
__meta__ = {
"_edit_group_": true
}

[node name="PreviousButton" type="Button" parent="SecButtonRoot"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
text = "Previous"

[node name="ResetButton" type="Button" parent="SecButtonRoot"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Reset"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="about_to_show" from="." to="." method="_on_ControllerLayout_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_ControllerLayout_popup_hide"]
[connection signal="pressed" from="MainButtonRoot/SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="MainButtonRoot/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="SecButtonRoot/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="SecButtonRoot/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
